--- a/04-handle-styles/extract-multiple-css/package.json
+++ b/04-handle-styles/extract-multiple-css/package.json
@@ -7,9 +7,8 @@
     "build": "webpack"
   },
   "devDependencies": {
-    "webpack": "4.29.4",
-    "webpack-cli": "3.2.3",
-    "webpack-dev-server": "3.1.14",
+    "webpack": "^3.6.0",
+    "webpack-dev-server": "2.9.1",
     "html-webpack-plugin": "3.2.0",
     "css-loader": "^0.28.7",
     "extract-text-webpack-plugin": "^3.0.2",
